kubernetes/app-prod-api-deployment.yml
#Homework 7 - deployment for flask API


apiVersion: apps/v1
kind: Deployment
metadata:
        name: app-test-flask
        labels:
                app: app-test-flask
spec:
        replicas: 2
        selector:
                matchLabels:
                        app: app-test-flask
        template:
                metadata:
                        labels:
                                app: app-test-flask
                spec:
                        containers:
                                - name: app-test-flask
                                  imagePullPolicy: Always
                                  image: khanks0217/fireball_api:1.1
                                  ports:
                                  - name: http
                                    containerPort: 5000
