kubernetes/app-prod-wrk-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
        name: wrk-deployment 
        labels:
                app: worker
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: worker
        template:
                metadata:
                        labels:
                                app: worker
                spec:
                        containers:
                                - name: worker
                                  imagePullPolicy: Always
                                  image: khanks0217/fireball_api:1.wrk
                                  ports:
                                  - name: http
                                    containerPort: 5000
