kubernetes/app-prod-api-nodeport.yml
---
kind: Service
apiVersion: v1
metadata:
   name: flasktest-service-nodeport
spec:
   type: NodePort
   selector:
      app: app-test-flask
   ports:
      - port: 5000
        targetPort: 5000
