kubernetes/app-prod-api-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: flasktest-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "khanks.coe332.tacc.cloud"
    http: 
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: flasktest-service-nodeport
              port:
                  number: 32684
